Expand page subtitles for clarity

--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -18,6 +18,7 @@
     <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <h1 class="text-2xl font-semibold mb-4">Budgets</h1>
+        <p class="mb-4">Set monthly spending limits for categories and monitor progress. Use this page to plan ahead and see where you may need to adjust your spending.</p>
         <section>
             <form id="budget-form" class="md:flex md:space-x-4 space-y-4 md:space-y-0">
                 <label class="block">Month<br><input type="month" id="month" class="border p-2 rounded" data-help="Month for the budget"></label>
