--- a/frontend/transfers.html
+++ b/frontend/transfers.html
@@ -26,6 +26,7 @@
                     </span>
 
                 </h1>
+                <p class="mb-4">Manage possible transfers between accounts and mark them so they don't count toward income or outgoings.</p>
                 <div id="transfers-table"></div>
             </section>
             <section>
