--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -18,7 +18,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4">All Years Dashboard</h1>
-            <p class="mb-4">Compare financial totals across every recorded year.</p>
+            <p class="mb-4">Compare financial totals across every recorded year to reveal long-term trends and patterns in your finances.</p>
 
             <h2 class="text-xl font-semibold mt-6 mb-2">Tag Totals</h2>
             <div id="tags-table" class="mt-2"></div>
