--- a/frontend/backup.html
+++ b/frontend/backup.html
@@ -16,6 +16,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
             <h1 class="text-2xl font-semibold mb-4">Backup &amp; Restore</h1>
+            <p class="mb-4">Create backups of your data or restore from an earlier snapshot. Use the tools below to download a copy of your information or load a previous backup.</p>
             <section class="bg-white p-6 rounded shadow space-y-4">
                 <h2 class="text-xl font-semibold">Download Backup</h2>
                 <p>Select which data to include in the backup JSON file.</p>
