--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white/80 backdrop-blur border-r p-6 shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-3xl font-semibold mb-4 text-indigo-700">Welcome to Finance Manager</h1>
-             <p class="text-gray-700">Select an option from the menu to get started.</p>
+            <p class="text-gray-700">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
             <p id="version" class="text-gray-500">Version: loading...</p>
             <button id="update-btn" class="mt-2 bg-green-600 text-white px-4 py-2 rounded flex items-center"><i class="fas fa-sync-alt mr-2"></i>Update</button>
             <pre id="update-output" class="mt-2 text-sm text-gray-600 whitespace-pre-wrap"></pre>
@@ -29,15 +29,15 @@
             <section class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
                     <i class="fas fa-chart-line text-indigo-600 text-4xl mb-2"></i>
-                    <p class="text-gray-700">Visualise your spending trends.</p>
+                    <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
                     <i class="fas fa-piggy-bank text-indigo-600 text-4xl mb-2"></i>
-                    <p class="text-gray-700">Track savings effortlessly.</p>
+                    <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
                 <div class="bg-white p-6 rounded shadow flex flex-col items-center text-center">
                     <i class="fas fa-money-bill-wave text-indigo-600 text-4xl mb-2"></i>
-                    <p class="text-gray-700">Manage budgets with ease.</p>
+                    <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
             </section>
 
