--- a/frontend/missing_tags.html
+++ b/frontend/missing_tags.html
@@ -17,7 +17,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4">Missing Tags</h1>
-            <p class="mb-4">Identify transactions that have not yet been tagged.</p>
+            <p class="mb-4">Identify transactions that have not yet been tagged so you can assign categories before they slip through your reports.</p>
             <div id="untagged-table"></div>
         </main>
     </div>
