--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -19,7 +19,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4">Monthly Statement</h1>
-            <p class="mb-4">Select a month to view a detailed list of transactions.</p>
+            <p class="mb-4">Select a month to view a detailed list of transactions. Reviewing each line ensures the data is accurate and properly tagged.</p>
             <div class="bg-white p-6 rounded shadow">
                 <form id="statement-form" class="flex items-end space-x-4">
                     <div>
