--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -18,7 +18,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4">Yearly Dashboard</h1>
-            <p class="mb-4">Analyse totals for a single year through charts and tables.</p>
+            <p class="mb-4">Analyse totals for a single year through charts and tables to understand how income and spending evolved month by month.</p>
             <label for="year-select" class="block">Year:
                 <select id="year-select" class="border p-2 rounded w-full" data-help="Select year to display"></select>
             </label>
