Add subtle vertical gradient background

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
         body { font-family: 'Roboto', sans-serif; font-weight: 300; }
     </style>
 </head>
-<body class="bg-gradient-to-br from-indigo-50 via-white to-blue-50">
+<body class="bg-gradient-to-b from-indigo-50 to-white">
     <div class="flex min-h-screen">
         <nav id="menu" class="w-64 flex-shrink-0 bg-white/80 backdrop-blur border-r p-6 shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
