Animate top-bar toast to push menu

--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -5,7 +5,7 @@
       <button id="menu-toggle" class="md:hidden bg-indigo-700 p-2 rounded"><i class="fa-solid fa-bars"></i></button>
       <div class="font-bold text-lg">Personal Finance Manager</div>
     </div>
-    <div class="flex items-center space-x-4">
+    <div id="topbar-right" class="flex items-center space-x-4 transition-transform duration-300">
       <form id="topbar-search" action="search.html" method="get" class="flex">
         <input type="text" name="value" placeholder="Search transactions" class="p-1 rounded text-black" />
         <button type="submit" class="ml-2"><i class="fa-solid fa-magnifying-glass"></i></button>
