--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -17,12 +17,12 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4">Manage Groups</h1>
+            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Manage Groups</h1>
             <p class="mb-4">Create groups to collect related categories for reporting and analysis. Grouping similar categories helps you see broader spending patterns.</p>
             <form id="group-form" class="space-y-4">
                 <label class="block">Group Name<br><input type="text" id="group-name" class="border p-2 rounded w-full" data-help="Name for the group"></label>
                 <label class="block">Description<br><textarea id="group-description" class="border p-2 rounded w-full" data-help="Description for the group"></textarea></label>
-                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Group</button>
+                <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Create Group</button>
             </form>
             <div class="mt-6 bg-white p-4 rounded shadow">
                 <h2 class="text-xl font-semibold mb-2">Existing Groups</h2>
@@ -56,7 +56,7 @@ async function loadGroups() {
                 const edit = document.createElement('button');
                 edit.innerHTML = '<i class="fa-solid fa-pen"></i>';
                 edit.setAttribute('aria-label','Edit');
-                edit.className = 'bg-blue-600 text-white px-2 py-1 rounded mr-2';
+                edit.className = 'bg-indigo-600 text-white px-2 py-1 rounded mr-2';
                 edit.addEventListener('click', async () => {
                     const name = prompt('Group Name', g.name);
                     if (name === null) return;
