--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -17,7 +17,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4">Application Logs</h1>
+            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Application Logs</h1>
             <p class="mb-4">Review recent log entries to monitor system activity. Filtering by time or keyword helps you trace what happened during a specific event.</p>
             <div id="logs-grid" class="mt-4"></div>
         </main>
