--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -17,13 +17,13 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
-            <h1 class="text-2xl font-semibold mb-4">Manage Tags</h1>
+            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Manage Tags</h1>
             <p class="mb-4">Create new tags and manage existing ones for categorising transactions. Tags act like labels that make reports and searches more meaningful.</p>
             <form id="tag-form" class="space-y-4">
                 <label class="block">Tag Name<br><input type="text" id="tag-name" class="border p-2 rounded w-full" data-help="Name for the tag"></label>
                 <label class="block">Keyword (for auto tagging)<br><input type="text" id="tag-keyword" class="border p-2 rounded w-full" data-help="Keyword used to auto-tag transactions"></label>
                 <label class="block">Description<br><textarea id="tag-description" class="border p-2 rounded w-full" data-help="Description for the tag"></textarea></label>
-                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Create Tag</button>
+                <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Create Tag</button>
             </form>
             <div class="mt-6 bg-white p-4 rounded shadow">
                 <h2 class="text-xl font-semibold mb-2">Existing Tags</h2>
@@ -49,7 +49,7 @@ async function loadTags(){
         data: tags,
         layout: 'fitDataStretch',
         columns: [
-            { title: 'Name', field: 'name', formatter: badgeFormatter('bg-blue-200 text-blue-800') },
+            { title: 'Name', field: 'name', formatter: badgeFormatter('bg-indigo-200 text-indigo-800') },
             { title: 'Keyword', field: 'keyword' },
             { title: 'Description', field: 'description' },
             { title: 'Actions', formatter: function(cell){
@@ -58,7 +58,7 @@ async function loadTags(){
                 const edit = document.createElement('button');
                 edit.innerHTML = '<i class="fa-solid fa-pen"></i>';
                 edit.setAttribute('aria-label','Edit');
-                edit.className = 'bg-blue-600 text-white px-2 py-1 rounded mr-2';
+                edit.className = 'bg-indigo-600 text-white px-2 py-1 rounded mr-2';
                 edit.addEventListener('click', async () => {
                     const name = prompt('Tag Name', t.name);
                     if (name === null) return;
