--- a/frontend/backup.html
+++ b/frontend/backup.html
@@ -27,7 +27,9 @@
                     <label class="block"><input type="checkbox" name="parts" value="groups" class="mr-2">Groups</label>
                     <label class="block"><input type="checkbox" name="parts" value="budgets" class="mr-2">Budgets</label>
                 </div>
-                <button id="download-backup" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-download mr-2"></i>Download</button>
+                <button id="download-backup" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-download mr-2"></i>Download JSON</button>
+                <p class="mt-4">Export all transactions to a single OFX file.</p>
+                <button id="download-ofx" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-file-export mr-2"></i>Download OFX</button>
             </section>
             <section class="bg-white p-6 rounded shadow space-y-4">
                 <h2 class="text-xl font-semibold">Restore Backup</h2>
