--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -18,7 +18,7 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Account Dashboard</h1>
-            <p class="mb-4">See an overview of account balances and recent activity. Charts and tables reveal how money flows through each account.</p>
+            <p class="mb-4">See an overview of account balances and recent activity. Charts and tables reveal how money flows through each account. Sort codes and account numbers are shown where applicable; credit cards list only their card number.</p>
             <div class="bg-white p-6 rounded shadow">
                 <div id="accounts-table"></div>
                 <div id="accounts-chart" class="mt-4" style="height:400px"></div>
@@ -51,6 +51,8 @@
                 },
                 columns: [
                     { title: 'Name', field: 'name' },
+                    { title: 'Sort Code', field: 'sort_code' },
+                    { title: 'Account/Card Number', field: 'account_number' },
                     { title: 'Transactions', field: 'transactions', hozAlign: 'right' },
                     { title: 'Balance', field: 'balance', hozAlign: 'right', formatter: balanceFormatter },
                     { title: 'Last Transaction', field: 'last_transaction' }
