Ensure unique colors for sunburst segments

--- a/frontend/graphs.html
+++ b/frontend/graphs.html
@@ -282,8 +282,8 @@
                 // followed by categories and tags on the outer rings
                 levels: [
                     { level: 1, colorByPoint: true, dataLabels: { rotationMode: 'parallel', style: { fontWeight: 'normal' } } },
-                    { level: 2, colorVariation: { key: 'brightness', to: -0.5 } },
-                    { level: 3, colorVariation: { key: 'brightness', to: -0.8 } }
+                    { level: 2, colorByPoint: true },
+                    { level: 3, colorByPoint: true }
                 ]
             }],
             title: { text: chartTitle },
