Use site icon across login, logout and top bar

--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -2,7 +2,7 @@
 <header class="fixed top-0 left-0 right-0 z-50 bg-indigo-600 text-white h-16 flex items-center shadow">
   <div class="w-full flex items-center justify-between px-4">
     <div class="flex items-center space-x-4">
-      <i class="fas fa-piggy-bank h-8 w-8"></i>
+      <img src="/favicon.svg" alt="Finance Manager logo" class="h-8 w-8" />
       <button id="menu-toggle" class="md:hidden bg-indigo-700 text-white p-2 rounded"><i class="fas fa-bars h-4 w-4"></i></button>
       <div class="font-bold text-lg flex items-center">
         <span>Personal Finance Manager</span>
